--- a/acsi_eip_driver/package.xml
+++ b/acsi_eip_driver/package.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>acsi_eip_driver</name>
   <version>0.1.0</version>
-  <description>Interface driver for Tolomatic ACSI Server via Ethernet/IP (Industrial Protocol)</description>
+  <description>ROS2 Interface driver for Tolomatic ACSI Server via Ethernet/IP (Industrial Protocol)</description>
 
   <license>BSD</license>
-  <maintainer email="wmccormick@swri.org">Bill McCormick</maintainer>
+  <maintainer email="ben.greenberg@swri.org">Ben Greenberg</maintainer>
   <author email="wmccormick@swri.org">Bill McCormick</author>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
-
-  <buildtool_depend>catkin</buildtool_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <depend>boost</depend>
   <depend>odva_ethernetip</depend>
-  <depend>roscpp</depend>
+  <depend>rclcpp</depend>
+  <depend>tolomatic_msgs</depend>
+  <depend>sensor_msgs</depend>
+  
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 
-  <test_depend>rosunit</test_depend>
-  <test_depend>roslaunch</test_depend>
 </package>
